--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.2.3",
+    "prop-types": "^15.7.2",
+    "redux": "^4.0.5",
+    "react-redux": "^7.2.3",
+    "redux-thunk": "^2.3.0",
+    "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
